# near-river

./: .env.example  .gitignore  LICENSE.md  docker-compose.gpu.yml  docker-compose.yml  package.json  readme.md
api/: .env.example  Dockerfile  config.py  main.py  readme.md  requirements.txt
api/config/: settings.py
api/config/ai_data/: prompt.md  sql_prompt.md  summary_prompt.md
api/config/prompts/: sql_prompt.md  summary_prompt.md
api/helpers/: decorators.py  middlewares.py  query.py  sql.py
api/models/: api_query_model.py  block_model.py  event_progress.py  receipt_action_model.py  transaction_model.py
api/routes/: account.py  analytics.py  block.py  blocks.py  tasks.py  transaction.py  transactions.py
api/schemas/: query_schema.py
api/scripts/: start_api.sh
api/services/: ai_model_service.py  ai_sql_service.py  ai_summary_service.py  ai_vector_service.py  analytics_service.py  database_service.py  db_service.py  event_listener_service.py  event_service.py  event_subscription_service.py  task_service.py
smart-contract/: Cargo.toml  README.md
substreams/: .env.example  Cargo.toml  Dockerfile  Makefile  readme.md  schema.clickhouse.sql  schema.postgresql.sql  substreams.clickhouse.yaml  substreams.postgresql.yaml
substreams/proto/: custom.proto  near_types.proto
substreams/scripts/: start_substreams.sh
substreams/src/: config.rs  env.rs  lib.rs
substreams/src/pb/: mod.rs  near.custom.v1.rs  sf.near.type.v1.rs
substreams/src/utils/: block_timestamp.rs  helpers.rs  mod.rs  transform.rs
