[package]
name = "near-substreams"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15"
once_cell = "1.19.0"
substreams = "0.5.13"
substreams-near = "0.9.6"
substreams-database-change = "1.3.1"
anyhow = "1"
prost = "0.11"
prost-types = "0.11"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
log = "0.4.22"
bs58 = "0.5.1"
serde_json = "1.0.128"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"